<resources>
    <string name="app_name">Calendar</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="brief_description">Brief Description:</string>
    <string name="task_creation">Task Creation</string>
    <string name="short_name">Short Name:</string>
    <string name="enter_short_name">Enter short name</string>
    <string name="enter_description">Enter description</string>
    <string name="start_time">Start Time:</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="location_optional">Location (optional):</string>
    <string name="enter_location">Enter location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="duration">Duration:</string>
    <string name="enter_duration">Enter duration</string>
    <string name="title_activity_calendar">activity_calendar</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="CalendarActivity">CalendarActivity</string>
    <string name="minutes">Minutes:</string>
    <string name="hours">Hours:</string>
    <string name="date">Date:</string>
    <string name="enter_task_id_for_deletion">Enter Task ID for deletion</string>
    <string name="enter_task_id">Enter Task ID</string>
    <string name="delete">Delete</string>
    <string name="task_deletion">Task Deletion</string>
    <string name="tasks_overview">Tasks Overview</string>
    <string name="task_overview">Task Overview</string>
    <string name="task_id">Task ID:</string>
    <string name="Back">Back</string>
    <string name="status">Status:</string>
    <string name="duration_value">Duration Value</string>
    <string name="task_id_value">Task ID Value</string>
    <string name="short_name_value">Short Name Value</string>
    <string name="start_date_value">Start Date Value</string>
    <string name="status_value">Status Value</string>
    <string name="change_status_to_completed">Change status to COMPLETED</string>
    <string name="view_location_on_google_maps">View location on Google Maps</string>
    <string name="location">Location:</string>
    <string name="location_value">Location Value</string>
    <string name="export_tasks">Export Tasks</string>
    <string name="view_tasks">View Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="month_value">Month Value</string>
    <string name="calendar">Calendar</string>
    <string name="back">Back</string>
    <string name="id_value">Id value</string>
    <string name="name_value">Value</string>
    <string name="statusvalue">StatusValue</string>
    <string name="short_name_1">Short Name:</string>
    <string name="task_id2">Task ID:</string>
    <string name="run_content_provider">Run Content Provider</string>
</resources>