<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/graphite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TaskOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_overview"
            android:textColor="@color/graywhite"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_id"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailIdValue"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:text="@string/task_id_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailShortNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_name"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailShortNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_name_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brief_description"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailDescriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brief_description"
                android:textColor="@color/graywhite"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- Status - Horizontal Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- Start Date - Horizontal Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailStartDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailStartDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- Duration - Horizontal Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailDurationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDetailLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/graylight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTaskDetailLocationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_value"
                android:textColor="@color/graywhite"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/graylight"
                android:minWidth="200dp"
                android:padding="12dp"
                android:text="@string/Back"
                android:textColor="@color/graphite" />

            <Button
                android:id="@+id/btnChangeStatus"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/graylight"
                android:minWidth="200dp"
                android:padding="12dp"
                android:text="@string/change_status_to_completed"
                android:textColor="@color/graphite" />

            <Button
                android:id="@+id/btnViewOnGmaps"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/graylight"
                android:minWidth="200dp"
                android:padding="12dp"
                android:text="@string/view_location_on_google_maps"
                android:textColor="@color/graphite" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
