<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graphite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/TaskCreation"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="127dp"
                android:layout_marginBottom="73dp"
                android:text="@string/task_creation"
                android:textColor="@color/graywhite"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck,TextSizeCheck" />

            <TextView
                android:id="@+id/ShortName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/short_name"
                android:textColor="@color/graylight"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/shortNameEditText"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/graylight"
                android:hint="@string/enter_short_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/graywhite"
                android:textColorHint="@color/graylight"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/BriefDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/brief_description"
                android:textColor="@color/graylight"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="376dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/graylight"
                android:gravity="top"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:textColor="@color/graywhite"
                android:textColorHint="@color/graylight"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/StartTime"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/start_time"
                android:textColor="@color/graylight"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/Hours"
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColor="@color/graylight"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/hoursSpinner"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/graylight"
                android:minHeight="48dp"
                android:textColor="@color/graywhite"
                tools:ignore="VisualLintSpinnerSize" />

            <TextView
                android:id="@+id/Minutes"
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="@color/graylight"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/minutesSpinner"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/graylight"
                android:minHeight="48dp"
                android:textColor="@color/graywhite"
                tools:ignore="VisualLintSpinnerSize" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/graylight"
                android:textSize="18sp" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:textColor="@color/graywhite"
                android:theme="@style/CalenderViewCustom"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

            <TextView
                android:id="@+id/Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="@color/graylight"
                android:textSize="18sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/durationEditText"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/graylight"
                android:hint="@string/enter_duration"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/graywhite"
                android:textColorHint="@color/graylight"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_optional"
                android:textColor="@color/graylight"
                android:textSize="18sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/graylight"
                android:hint="@string/enter_location"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/graywhite"
                android:textColorHint="@color/graylight"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/graylight"
                android:text="@string/save"
                android:textColor="@color/graphite"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/graylight"
                android:text="@string/cancel"
                android:textColor="@color/graphite"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
