<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graphite">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/calendar"
        android:textColor="@color/graywhite"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/monthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="16dp"
        android:text="@string/month_value"
        android:textColor="@color/graywhite"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/monthText"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <Button
            android:id="@+id/createTaskButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/graylight"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/create_task"
            android:textColor="@color/graphite" />

        <Button
            android:id="@+id/deleteTaskButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/graylight"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/delete_task"
            android:textColor="@color/graphite" />

        <Button
            android:id="@+id/viewTasksButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/graylight"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/view_tasks"
            android:textColor="@color/graphite" />


        <Button
            android:id="@+id/exportTasksButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/graylight"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/export_tasks"
            android:textColor="@color/graphite" />

        <Button
            android:id="@+id/contentProviderButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/graylight"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/run_content_provider"
            android:textColor="@color/graphite" />
    </LinearLayout>

</RelativeLayout>
