<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/graphite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/TaskCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/task_deletion"
            android:textColor="@color/graywhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_task_id_for_deletion"
            android:textColor="@color/graylight"
            android:textSize="18sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/TaskIDEditText"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/graylight"
            android:hint="@string/enter_task_id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/graywhite"
            android:textColorHint="@color/graylight" />

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/graylight"
            android:text="@string/delete"
            android:textColor="@color/graphite" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/graylight"
            android:text="@string/cancel"
            android:textColor="@color/graphite" />

    </LinearLayout>
</ScrollView>
